--- a/index.html
+++ b/index.html
@@ -5,3 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEBSTUDIO</title>
 </head>
+<body>
+    <header>
+        <a href="./index.html">
+            <img src="./images/Logo.svg" alt="WEBSTUDIO Logo">
+        </a>
+        <!-- Navigation -->
+        <nav>
+            <ul>
+                <li><a href="#">Studio</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li><a href="malto:info@devstudio.com">info@devstudio.com</a></li>
+              <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
