Add to First section

--- a/index.html
+++ b/index.html
@@ -25,4 +25,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <!-- Fist section -->
+        <section>
+            <p>
+                <h1>Effective Solutions for Your Business</h1>
+            </p>
+            <button>
+                <p>Order Service</p>
+            </button>
+        </section>
 </body>
