--- a/index.html
+++ b/index.html
@@ -90,3 +90,15 @@
      </main>
     
 </body>
+<!-- Footer -->
+<footer>
+    <section>
+        <a href="./index.html">
+            <img src="./images/Logo.svg" alt="WEBSTUDIO Logo">
+        </a>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </section>
+</footer>
+</html>
