Fixed in Button

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
     <main>
         <!-- Fist section -->
         <section>
-            <p>
-                <h1>Effective Solutions for Your Business</h1>
-            </p>
+            <p> <h1>Effective Solutions for Your Business</h1></p>
+               
             <button>
-                <p>Order Service</p>
+                Order Service
             </button>
         </section>
         <!-- mini section -->
