--- a/index.html
+++ b/index.html
@@ -56,27 +56,25 @@
   </section>
   <!-- Our Team -->
   <section>
-    <p>
-        <h2>Our Team</h2>
-    </p>
+    <p><h2>Our Team</h2></p>
     <ul>
         <li>
-            <img src="./images/img.Mark Guerrero.svg" alt="Mark Guerrero foto">
+            <img src="/images/img.MarkGuerrero.jpg" alt="Mark Guerrero foto">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="/images/img,Tom Ford.svg" alt="Tom Ford foto">
+            <img src="/images/img.TomFord.jpg" alt="Tom Ford foto">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="/images/img . Camila Garcia.svg" alt="Camila Garcia foto">
+            <img src="/images/img.CamilaGarcia.jpg" alt="Camila Garcia foto">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="/images/img. Daniel Wilson.svg" alt="Daniel Wilson foto">
+            <img src="/images/img.DanielWilson.jpg" alt="Daniel Wilson foto">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
