--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <a href="./index.html">
-            <img src="./images/Logo.svg" alt="WEBSTUDIO Logo">
+            <p>WEBSTUDIO</p>
         </a>
         <!-- Navigation -->
         <nav>
@@ -16,10 +16,15 @@
                 <li><a href="#">Studio</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
+                
+            </ul>
+        </nav>
+        <div>
+            <ul>
                 <li><a href="malto:info@devstudio.com">info@devstudio.com</a></li>
               <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
-        </nav>
+        </div>
     </header>
     <main>
         <!-- Fist section -->
@@ -87,7 +92,7 @@
 <footer>
     <div>
         <a href="./index.html">
-            <img src="./images/Logo.svg" alt="WEBSTUDIO Logo">
+           <p>WEBSTUDIO</p>
         </a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
