--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">
-            <p>WEBSTUDIO</p>
-        </a>
+        <a href="./index.html">WEBSTUDIO</a>
+        
         <!-- Navigation -->
         <nav>
             <ul>
@@ -91,9 +90,8 @@
 <!-- Footer -->
 <footer>
     <div>
-        <a href="./index.html">
-           <p>WEBSTUDIO</p>
-        </a>
+        <a href="./index.html">WEBSTUDIO </a>
+       
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
