--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </button>
         </section>
         <!-- mini section -->
-<section>
+<div>
     <ul>
       <li>
           <h3>Stategy</h3>
@@ -57,28 +57,28 @@
           <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
       </li>
     </ul>
-  </section>
+  </div>
   <!-- Our Team -->
   <section>
     <p><h2>Our Team</h2></p>
     <ul>
         <li>
-            <img src="/images/img.MarkGuerrero.jpg" alt="Mark Guerrero foto">
+            <img src="/images/MarkGuerrero.jpg" alt="Mark Guerrero foto">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="/images/img.TomFord.jpg" alt="Tom Ford foto">
+            <img src="/images/TomFord.jpg" alt="Tom Ford foto">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="/images/img.CamilaGarcia.jpg" alt="Camila Garcia foto">
+            <img src="/images/CamilaGarcia.jpg" alt="Camila Garcia foto">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="/images/img.DanielWilson.jpg" alt="Daniel Wilson foto">
+            <img src="/images/DanielWilson.jpg" alt="Daniel Wilson foto">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
