--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <!-- Fist section -->
         <section>
-            <p><h1>Effective Solutions for Your Business</h1></p>
+            <h1>Effective Solutions for Your Business</h1>
                
             <button>
                 Order Service
@@ -60,7 +60,7 @@
   </div>
   <!-- Our Team -->
   <section>
-    <p><h2>Our Team</h2></p>
+    <h2>Our Team</h2>
     <ul>
         <li>
             <img src="/images/MarkGuerrero.jpg" alt="Mark Guerrero foto">
@@ -87,7 +87,7 @@
      </main>
     
 </body>
-<!--Footer-->
+
 <footer>
     <div>
         <a href="./index.html">WEBSTUDIO</a>
