--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
         </div>
     </header>
     <main>
-        <!-- Fist section -->
+        <!-- First section -->
         <section>
             <h1>Effective Solutions for Your Business</h1>
                
-            <button>
-                Order Service
-            </button>
+            <button type="button">Order Service</button>
         </section>
         <!-- mini section -->
 <div>
@@ -63,22 +61,22 @@
     <h2>Our Team</h2>
     <ul>
         <li>
-            <img src="/images/MarkGuerrero.jpg" alt="Mark Guerrero foto">
+            <img src="/images/MarkGuerrero.jpg" alt="Mark Guerrero foto" width="264px">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="/images/TomFord.jpg" alt="Tom Ford foto">
+            <img src="/images/TomFord.jpg" alt="Tom Ford foto" width="264px">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="/images/CamilaGarcia.jpg" alt="Camila Garcia foto">
+            <img src="/images/CamilaGarcia.jpg" alt="Camila Garcia foto" width="264px">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="/images/DanielWilson.jpg" alt="Daniel Wilson foto">
+            <img src="/images/DanielWilson.jpg" alt="Daniel Wilson foto" width="264px">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
