--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
     <h2>Our Team</h2>
     <ul>
         <li>
-            <img src="/images/MarkGuerrero.jpg" alt="Mark Guerrero foto" width="264px">
+            <img width="264px" src="/images/MarkGuerrero.jpg" alt="Mark Guerrero foto">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="/images/TomFord.jpg" alt="Tom Ford foto" width="264px">
+            <img width="264px" src="/images/TomFord.jpg" alt="Tom Ford foto">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="/images/CamilaGarcia.jpg" alt="Camila Garcia foto" width="264px">
+            <img width="264px" src="/images/CamilaGarcia.jpg" alt="Camila Garcia foto">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="/images/DanielWilson.jpg" alt="Daniel Wilson foto" width="264px">
+            <img width="264px"src="/images/DanielWilson.jpg" alt="Daniel Wilson foto">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
