--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
     <footer>
         <!-- Third section-->
     <section>
+        <div>
         <a href="./index.html">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
+    </div>
     </section>
         
        </footer> 
