--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>Features</h2>
         <ul>
       <li>
-          <h3>Stategy</h3>
+          <h3>Strategy</h3>
           <p>Our goal is to identify the business
               problem to walk away with the perfect and creative solution. 
           </p>
@@ -69,22 +69,22 @@
     <h2>Our Team</h2>
     <ul>
         <li>
-            <img width="264" src="/images/MarkGuerrero.jpg" alt="Mark Guerrero foto">
+            <img width="264" src="./images/MarkGuerrero.jpg" alt="Mark Guerrero foto">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img width="264" src="/images/TomFord.jpg" alt="Tom Ford foto">
+            <img width="264" src="./images/TomFord.jpg" alt="Tom Ford foto">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img width="264" src="/images/CamilaGarcia.jpg" alt="Camila Garcia foto">
+            <img width="264" src="./images/CamilaGarcia.jpg" alt="Camila Garcia foto">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img width="264" src="/images/DanielWilson.jpg" alt="Daniel Wilson foto">
+            <img width="264" src="./images/DanielWilson.jpg" alt="Daniel Wilson foto">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
